# mcp_practice

./: .env  README.md  pyproject.toml
scripts/: verify_client.py
src/philter_mcp_server/: __init__.py  __main__.py  app.py  config.py  detection_models.py  logging_utils.py  mcp_main.py  models.py  stack_main.py
src/philter_mcp_server/agent/: __init__.py  app.py  config.py  models.py  pipeline.py
src/philter_mcp_server/providers/: base.py  factory.py  philter_api.py  rule_based.py
tests/: test_agent_api.py  test_agent_pipeline.py  test_mcp_tools.py  test_providers.py
